# fargin

./: Cargo.toml  DEVELOPMENT_CYCLE.md  LICENSE  README.md  check.sh
.fargin/: config.toml
examples/: custom_project_manager.rs
examples/integration_example/: Cargo.toml
examples/integration_example/src/: main.rs
src/: check.rs  cli.rs  config.rs  docs.rs  facts.rs  features.rs  howto.rs  lib.rs  main.rs  progress.rs  reset.rs  suggest.rs  suggestions.rs  validation.rs
